# Vii

./: .gitignore  README.md  c.sh  c2.sh  c_converter.cpp  c_converter.h  compile_windows.bat  file_handler.h  ir.h  main.cpp  object.h  object_int.h  object_string.h  parser.cpp  parser.h  scanner.cpp  scanner.h  source_file.h  symbol.h  test.cpp  test.vii  testing.vii  todo.txt  token.cpp  typer.h  util.h  workspace.cpp  workspace.h  workspace.vii
lib/: io.vii
src/: CMakeLists.txt  ast.h  backend_x64.cpp  backend_x64.h  c_converter.cpp  c_converter.h  export_x64.cpp  export_x64.h  exporter.h  file_handler.h  ir.cpp  ir.h  ir_types.h  main.cpp  registry.cpp  registry.h  reporter.cpp  reporter.h  resolver.cpp  resolver.h  scanner.cpp  scanner.h  token.cpp  token.h  typer.h  util.h  verification.cpp  verification.cpp~  verification.h  vii.h  workspace.cpp  workspace.h
src/lib/: io.vii
src/std/: string.cpp  string.h
